--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,3 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=PT+Serif+Caption&display=swap");
+:root {
+  --black: #2e374d;
+  --purple: #6f43d6;
+  --white: #ffffff;
+  --green: #70efdd;
+  --font-pt: "PT Serif Caption", serif;
+}
 * {
   outline: none;
   text-decoration: none;
@@ -19,6 +27,10 @@ html {
     padding: 0;
     line-height: 1.3;
     overflow-x: hidden;
+    background-color: #6f43d6;
+    font-family: var(--font-pt);
+    color: var(--black);
+    transition: all 0.3s ease 0s;
     a,
     a:hover,
     a:visited,
